- New: Move permission "see hidden categories" into "see hidden products/services".
- New: Can delete several files at once in FTP module.
- New: Add box "last contracts".
- New: Works even if Web hosting provider has disabled glob function.
- New: Can now send supplier order by mail.
- New: task #10076 : Show content of message in notification module.
- New: Bank name available on invoice.
- New: IBAN value is called IFSC if country is India
- Fix: Debug experimental module widthrawal.
- Fix: Format number was wrong for ar_AR language.
- Fix: Can change password if has only permission change password.
- Fix: Project PDF document show the tasks.
- Fix: bug #29278 : SMTP fails with IP
- Fix: Default language on login page.
- Fix: Complete support of euros sign (even in PDF).
- Fix: Bad setup of phpMyAdmin for DoliWamp installer.
- Fix: Tracking number should be available on sending sheets.

For tranlators:
- Fix: Major update of italian translation (it_IT).
- New: Added slovenian translation (sl_SL).
- New: Add translation of DoliWamp installer.

For developers:
- More comments in code.
- Uniformize some code. 
- Delete all useless pre.inc.php files (this also increase speed).
- Fix W3C errors in page forging.
- Qual: Mutualize code of menu managers.
- Better isolation of modules files and dolibarr core files. 
- task #8682 : Remove functions unix_timestamp
- The makepack tool nos make pack with UID 500.

WARNING: 
- A lot of class files (*.class.php) has moved into subdirectories. So If you use
  or develop non official modules that includes Dolibarr classes, you will have to rename
  path to thoose classes into the include function.
- Also, parameters of the "fetch()" method for class "User" has changed to reflect
  other fetch methods.   
- This version is also the last one to support PHP 4.*. Dolibarr 3.* will be supported
  with PHP 5.* and higher only.


***** ChangeLog for 2.8.1 compared to 2.8 *****
For users:
- Fix: Works on database with _ in name.