@@ -37,7 +37,8 @@ For users:
 - New: Can now send supplier order by mail.
 - New: task #10076 : Show content of message in notification module.
 - New: Bank name available on invoice.
-- New: IBAN value is called IFSC if country is India
+- New: IBAN value is called IFSC if country is India.
+- New: Add option to choose firstname-name or name-firstname.
 - Fix: Debug experimental module widthrawal.
 - Fix: Format number was wrong for ar_AR language.
 - Fix: Can change password if has only permission change password.
